<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dirtytweaks_title">Nusantara Wings</string>
    <string name="dirtytweaks_summary">Get your favorite customization</string>
    <string name="nad_style_title">Nusantara wings background</string>
    <string name="nad_color_random">Random</string>
    <string name="nad_color_transparent">Transparent</string>
    <string name="nad_color_accent">Accent</string>
    <string name="dialog_team_title">The team</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_hardware_title">Hardware</string>
    <string name="bottom_nav_multitasking_title">Multitasking</string>
    <string name="nad_parts_title">Nusantara Parts</string>
    <string name="nad_parts_summary">Device specific customization</string>
    <string name="themes_title">Themes</string>
    <string name="themes_summary">Customize the themes</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Customize the miscellaneous</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Customize the power menu</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Customize the notifications</string>
    <string name="spoof_title">Spoofing</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Customize the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen item</string>
    <string name="lockscreen_style_title">Lockscreen Style</string>
    <string name="lockscreen_style_summary">Customize the lockscreen</string>
    <string name="switch_settings_title">Element</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize the statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Customize the statusbar items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Customize the quick settings</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Customize the Button options</string>
    <string name="navigation_options_title">Navigation</string>
    <string name="navigation_options_summary">Customize the navigation options</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sub_cat_advanced">Advanced</string>
    <string name="signal_icon_title">Signal Icon</string>
    <string name="switch_category">Advanced Switch</string>
    <string name="animation_settings_title">Screen Animations</string>
    <string name="animation_settings_summary">System Wide Screen Animation Options</string>
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_screenrecord_title">Screenrecord</string>
    <string name="powermenu_disabled_title">Power menu when locked</string>
    <string name="powermenu_disabled_summary">Disable power menu on secure lockscreen</string>
    <string name="powermenu_lockscreen_title">Lockscreen visibility</string>
    <string name="powermenu_lockscreen_summary">Display power menu on a secured lockscreen</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="volume_rocker_music_controls_title">Music control</string>
    <string name="volume_rocker_music_controls_summary">Long press volume buttons to switch tracks while screen off</string>
    <string name="volume_stuff_title">Volume Button</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="fprint_sucess_vib_title">FP authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate when fingerprint authentication is successful</string>
    <string name="fprint_error_vib_title">FP error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate when fingerprint authentication fails</string>
    <string name="status_bar_battery_style_title">Battery icon style</string>
    <string name="battery_percentage_title">Battery percentage</string>
    <string name="statusbar_items_title">Statusbar icons</string>
    <string name="statusbar_items_summary">Toggle the visibility of icons in statusbar</string>
    <string name="battery_light_settings">Charging LED</string>
    <string name="battery_light_settings_summary">Customize the battery indication LED</string>
    <string name="panel_porn_title">Power Menu Transparency</string>
    <string name="power_menu_transparency">Power/Reboot menu opacity</string>
    <string name="power_menu_dialog_dim">Power/Reboot dialog dim background amount</string>
    <string name="bluetooth_battery_title">Bluetooth battery status</string>
    <string name="bluetooth_battery_summary">Show battery level for the currently connected BT headset, if available.</string>
    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display the roaming indicator in signal icon when in roaming mode</string>
    <string name="volume_panel_on_left_title">Volume Panel on Left</string>
    <string name="volume_panel_on_left_summary">Change volume panel from right side to left side</string>
    <string name="qs_show_battery_estimate_title">Battery estimates</string>
    <string name="qs_show_battery_estimate_summary">Show estimated remaining battery life next to the icon</string>
    <string name="double_tap_power_flashlight_title">Screen off power button torch</string>
    <string name="battery_bar_title">Battery Bar</string>
    <string name="battery_bar_location">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
    <string name="battery_bar_use_gradient_color">Use gradient color</string>
    <string name="battery_bar_gradient_color_summary">Use gradient color as a scale for the battery level</string>
    <string name="battery_bar_high_color">High level color"</string>
    <string name="battery_bar_low_color">Low level color"</string>
    <string name="aggressive_battery_title">Aggressive Battery</string>
    <string name="aggressive_battery_summary">More strict battery savings</string>
    <string name="fod_icon_picker_category_title">FOD customization options</string>
    <string name="fod_icon_picker_title">Icon customizer</string>
    <string name="fod_icon_picker_summary">Choose your favorite fingerprint icon</string>
    <string name="fod_pressed_state_title">Pressed icon effect</string>
    <string name="fod_pressed_state_footer">Icons/colors may vary depending on which device you are using.</string>
    <string name="fod_recog_animation">Recognizing animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Recognizing animation effect</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="theme_navbar_picker_title">Navbar style</string>
    <string name="theme_navbar_picker_summary">Select navbar style</string>
    <string name="adaptive_icon_shape_title">Icon shape</string>
    <string name="adaptive_icon_shape_dialog_title">Select icon shape</string>
    <string name="qs_tile_style_title">QS tile style</string>
    <string name="statusbar_icons_title">Statusbar/QS icons</string>
    <string name="statusbar_icons_dialog_title">Select statusbar icon set</string>
    <string name="qs_header_style_title">QS Header style</string>
    <string name="qs_header_style_dialog_title">Select QS header style set</string>
    <string name="switch_style_title">Switch style</string>
    <string name="switch_style_dialog_title">Select switch style set</string>
    <string name="theme_type_title">System theme</string>
    <string name="theme_type_summary">Select theme</string>
    <string name="accent_color">Accent picker</string>
    <string name="accent_color_summary">Choose the accent color yourself</string>
    <string name="font_type_title">Font type</string>
    <string name="font_type_summary">Select font type</string>
    <string name="gvm_title">G Visual Mod</string>
    <string name="sb_height_title">Statusbar height type</string>
    <string name="sb_height_summary">Select statusbar height type</string>
    <string name="ui_radius_title">UI radius type</string>
    <string name="ui_radius_summary">Select UI radius type</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
</resources>