<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/fingerprint_prefs_title" >

        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="fingerprint_error_vib"
            android:title="@string/fprint_error_vib_title"
            android:summary="@string/fprint_error_vib_summary"
            android:defaultValue="true" />

        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="fp_unlock_keystore"
            android:title="@string/fp_unlock_keystore_title"
            android:summary="@string/fp_unlock_keystore_summary"
            android:defaultValue="false" />

    <!-- FOD customization options -->
    <PreferenceCategory
        android:key="fod_icon_picker"
        android:title="@string/fod_icon_picker_category_title">

        <Preference
            android:key="fod_icon_picker_category"
            android:title="@string/fod_icon_picker_title"
            android:summary="@string/fod_icon_picker_summary"
            android:fragment="com.dirtyunicorns.tweaks.fragments.FODIconPickerFragment" />

        <!-- FOD recognizing animation -->
        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="fod_recognizing_animation"
            android:title="@string/fod_recog_animation"
            android:summary="@string/fod_recog_animation_summary"
            android:defaultValue="false" />

        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
            android:key="fod_anim"
            android:title="@string/fod_recog_animation_effect_title"
            android:summary="%s"
            android:entries="@array/fod_recog_animation_entries"
            android:entryValues="@array/fod_recog_animation_values"
            android:defaultValue="0"
            android:dependency="fod_recognizing_animation" />

        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
            android:key="fod_pressed_state"
            android:dialogTitle="@string/fod_pressed_state_title"
            android:title="@string/fod_pressed_state_title"
            android:summary="%s"
            android:entries="@array/fod_pressed_state_entries"
            android:entryValues="@array/fod_pressed_state_values"
            android:defaultValue="0" />

        <Preference
            android:summary="@string/fod_pressed_state_footer" />

    </PreferenceCategory>
</PreferenceScreen>

