<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/powermenu_title" >

    <PreferenceCategory
        android:title="@string/panel_porn_title">

	<com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
            android:key="transparent_power_menu"
            android:title="@string/power_menu_transparency"
            android:max="100"
            settings:min="0"
            settings:units="%"
            android:defaultValue="100" />

	<com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
            android:key="transparent_power_dialog_dim"
            android:title="@string/power_menu_dialog_dim"
            android:max="100"
            settings:min="0"
            settings:units="%"
            android:defaultValue="50" />
    </PreferenceCategory>

    <ListPreference
        android:key="power_menu_animations"
        android:title="@string/power_menu_animation_title"
        android:dialogTitle="@string/power_menu_animation_dialog_title"
        android:entries="@array/power_menu_animations_entries"
        android:entryValues="@array/power_menu_animations_values"
        android:summary="@string/power_menu_animation_summary"
        android:persistent="false" />

    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
        android:key="reboot_in_power_menu"
        android:title="@string/powermenu_reboot_title"
        android:defaultValue="true" />

    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
        android:key="advanced_reboot_in_power_menu"
        android:title="@string/powermenu_advanced_restart_title"
        android:summary="@string/powermenu_advanced_restart_summary"
        android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
        android:key="lockdown_in_power_menu"
        android:title="@string/powermenu_lockdown_title"
        android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
        android:key="screenshot_in_power_menu"
        android:title="@string/powermenu_screenshot_title"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="powermenu_torch"
        android:title="@string/powermenu_torch"
        android:persistent="false" />

    <PreferenceCategory
        android:key="powermenu_advanced_category"
        android:title="@string/sub_cat_advanced">

        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
            android:key="secured_lock_power_menu"
            android:title="@string/powermenu_lockscreen_title"
            android:summary="@string/powermenu_lockscreen_summary"
            android:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>
